--- a/DeliveryServiceWeb/DeliveryServiceWeb.csproj
+++ b/DeliveryServiceWeb/DeliveryServiceWeb.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="11.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-rc.2.24474.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-rc.2.24474.1">
@@ -22,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DeliveryServiceBL\DeliveryServiceBL.csproj" />
       <ProjectReference Include="..\DeliveryServiceDataAccess\DeliveryServiceDataAccess.csproj" />
     </ItemGroup>
 
