--- a/DeliveryServiceWeb/DeliveryServiceWeb.csproj
+++ b/DeliveryServiceWeb/DeliveryServiceWeb.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Duende.IdentityServer" Version="7.1.0-preview.1" />
+        <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="7.1.0-preview.1" />
         <PackageReference Include="FluentValidation" Version="11.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-rc.2.24474.1" />
@@ -14,6 +16,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.3.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0-rc.2" />
         <PackageReference Include="Serilog" Version="4.0.2" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
@@ -25,6 +28,10 @@
     <ItemGroup>
       <ProjectReference Include="..\DeliveryServiceBL\DeliveryServiceBL.csproj" />
       <ProjectReference Include="..\DeliveryServiceDataAccess\DeliveryServiceDataAccess.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="logs\" />
     </ItemGroup>
 
 </Project>
